crates/varyk/tests/snapshots/codegen__hello_cargo_toml.snap
---
source: crates/varyk/tests/codegen.rs
expression: krate.cargo_toml
---
[dependencies]

[package]
edition = "2024"
name = "test_pkg"
version = "0.0.0"

[workspace]
