crates/varyk/tests/snapshots/codegen__hello_main_rs.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/main.rs\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    ::std::println!("Hello, world!");
}
