crates/varyk/tests/snapshots/codegen__if_of_literals_to_a_mut_string_parameter_is_borrowed_as_a_whole.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn show(s: string) {\\n    println!(\\\"{}\\\", s);\\n}\\n\\nfn clear(mut s: string) {\\n    s = \\\"\\\";\\n}\\n\\nfn main() {\\n    let c = true;\\n    show(if c { \\\"a\\\" } else { \\\"b\\\" });\\n    clear(if c { \\\"a\\\" } else { \\\"b\\\" });\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn show(s: &str) {
    ::std::println!("{}", s);
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn clear(s: &mut String) {
    *s = "".to_string();
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let c = true;
    show(if c {
        "a"
    } else {
        "b"
    });
    clear(&mut (if c {
        "a".to_string()
    } else {
        "b".to_string()
    }));
}
