crates/varyk/tests/snapshots/codegen__if_of_new_values_is_borrowed_as_a_whole.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn make() -> string {\\n    \\\"m\\\"\\n}\\n\\nfn show(s: string) {\\n    println!(\\\"{}\\\", s);\\n}\\n\\nfn clear(mut s: string) {\\n    s = \\\"\\\";\\n}\\n\\nfn f(c: bool, name: string) -> bool {\\n    show(if c { make() } else { \\\"lit\\\" });\\n    clear(if c { make() } else { make() });\\n    println!(\\\"{}\\\", if c { make() } else { \\\"y\\\" });\\n    (if c { make() } else { \\\"y\\\" }) == name\\n}\\n\\nfn main() {\\n    println!(\\\"{}\\\", f(true, \\\"m\\\"));\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn make() -> String {
    "m".to_string()
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn show(s: &str) {
    ::std::println!("{}", s);
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn clear(s: &mut String) {
    *s = "".to_string();
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn f(c: bool, name: &str) -> bool {
    show(&(if c {
        make()
    } else {
        "lit".to_string()
    }));
    clear(&mut (if c {
        make()
    } else {
        make()
    }));
    ::std::println!("{}", if c {
        make()
    } else {
        "y".to_string()
    });
    (if c {
        make()
    } else {
        "y".to_string()
    }).as_str() == name
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    ::std::println!("{}", f(true, "m"));
}
