crates/varyk/tests/snapshots/codegen__if_operand_of_arithmetic_is_parenthesized.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn pick(c: bool) -> i32 {\\n    if c { 1 } else { 2 } + 10\\n}\\n\\nfn main() {\\n    println!(\\\"{}\\\", pick(true));\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn pick(c: bool) -> i32 {
    (if c {
        1
    } else {
        2
    }) + 10
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    ::std::println!("{}", pick(true));
}
