crates/varyk/tests/snapshots/codegen__if_operand_of_string_comparison_is_parenthesized.snap
---
source: crates/varyk/tests/codegen.rs
expression: "main_rs(\"fn same(c: bool, a: string) -> bool {\\n    (if c { a } else { \\\"b\\\" }) == \\\"x\\\"\\n}\\n\\nfn main() {\\n    println!(\\\"{}\\\", same(true, \\\"x\\\"));\\n}\\n\")"
---
#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn same(c: bool, a: &str) -> bool {
    (if c {
        a
    } else {
        "b"
    }) == "x"
}

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    ::std::println!("{}", same(true, "x"));
}
