crates/varyk/tests/snapshots/codegen__imported_modes_on_copy_and_string_parameters.snap
---
source: crates/varyk/tests/codegen.rs
expression: "file(&krate, \"src/main.rs\")"
---
mod ext;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut s = "a".to_string();
    let r = crate::ext::mix(10i64, &2, &mut s, "x".to_string());
    ::std::println!("{}", r);
}
