crates/varyk/tests/snapshots/codegen__imported_mut_reference_parameter_gets_a_mut_borrow.snap
---
source: crates/varyk/tests/codegen.rs
expression: main
---
mod ext;

#[allow(warnings, arithmetic_overflow, unconditional_panic)]
fn main() {
    let mut n = 1;
    crate::ext::bump(&mut n);
    ::std::println!("{}", n);
}
